{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 64,
  "lineage": "4112df5c-8fbc-beb8-d11e-0bb4ccf61bfa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b418580298265d5c",
            "arn": "arn:aws:ec2:eu-central-1:560992162784:instance/i-08731682d9e39f71b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3_profile",
            "id": "i-08731682d9e39f71b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-056cc8fa10399fafd",
            "private_dns": "ip-172-31-37-107.eu-central-1.compute.internal",
            "private_ip": "172.31.37.107",
            "public_dns": "ec2-54-93-106-45.eu-central-1.compute.amazonaws.com",
            "public_ip": "54.93.106.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06377854206448f3a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-bb58bfc7",
            "tags": {
              "Name": "web-001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0455f70d7bb3ee039"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3_profile",
            "aws_iam_role.s3_role",
            "aws_security_group.allow_tls"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b418580298265d5c",
            "arn": "arn:aws:ec2:eu-central-1:560992162784:instance/i-041f728d2a04c22f3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3_profile",
            "id": "i-041f728d2a04c22f3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0170428710d774cd8",
            "private_dns": "ip-172-31-43-64.eu-central-1.compute.internal",
            "private_ip": "172.31.43.64",
            "public_dns": "ec2-3-120-130-12.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.120.130.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03022984c7660595e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-bb58bfc7",
            "tags": {
              "Name": "web-002"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0455f70d7bb3ee039"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3_profile",
            "aws_iam_role.s3_role",
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_tf",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:loadbalancer/app/lb-tf/ad2aeeef80b93ce3",
            "arn_suffix": "app/lb-tf/ad2aeeef80b93ce3",
            "dns_name": "lb-tf-1099574259.eu-central-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:loadbalancer/app/lb-tf/ad2aeeef80b93ce3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-tf",
            "security_groups": [
              "sg-0455f70d7bb3ee039"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-a447ade8"
              },
              {
                "subnet_id": "subnet-bb58bfc7"
              },
              {
                "subnet_id": "subnet-ea74dc80"
              }
            ],
            "subnets": [
              "subnet-a447ade8",
              "subnet-bb58bfc7",
              "subnet-ea74dc80"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-ffdb1b95",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "first_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:listener/app/lb-tf/ad2aeeef80b93ce3/d6e087f9b654fd71",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:targetgroup/tf-lb-tg/24931e2159d7ff95",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:listener/app/lb-tf/ad2aeeef80b93ce3/d6e087f9b654fd71",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:loadbalancer/app/lb-tf/ad2aeeef80b93ce3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.alb_tf",
            "aws_lb_target_group.lb_tg",
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:targetgroup/tf-lb-tg/24931e2159d7ff95",
            "arn_suffix": "targetgroup/tf-lb-tg/24931e2159d7ff95",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:targetgroup/tf-lb-tg/24931e2159d7ff95",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-ffdb1b95"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my_atach1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:targetgroup/tf-lb-tg/24931e2159d7ff95-20200314133557568800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:targetgroup/tf-lb-tg/24931e2159d7ff95",
            "target_id": "i-08731682d9e39f71b"
          },
          "dependencies": [
            "aws_iam_instance_profile.s3_profile",
            "aws_iam_role.s3_role",
            "aws_instance.web",
            "aws_lb_target_group.lb_tg",
            "aws_security_group.allow_tls"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:targetgroup/tf-lb-tg/24931e2159d7ff95-20200314133557619500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:targetgroup/tf-lb-tg/24931e2159d7ff95",
            "target_id": "i-041f728d2a04c22f3"
          },
          "dependencies": [
            "aws_iam_instance_profile.s3_profile",
            "aws_iam_role.s3_role",
            "aws_instance.web",
            "aws_lb_target_group.lb_tg",
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:security-group/sg-0455f70d7bb3ee039",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0455f70d7bb3ee039",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": null,
            "owner_id": "560992162784",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-ffdb1b95"
          }
        }
      ]
    }
  ]
}